# Wright-lang

wright/: Cargo.toml
wright/src/: backend.rs  grammar.rs  interpreter.rs  lib.rs
wright/src/backend/: treewalk.rs
wright/src/backend/treewalk/: ast_eval.rs  context.rs  value.rs
wright/src/grammar/: ast.rs  grammar.pest  model.rs  parser.rs  parsers.rs  prelude.rs
wright/src/grammar/ast/: expression.rs  literal.rs  pattern.rs  statement.rs  types.rs
wright/src/grammar/parsers/literal/: num_lit.rs
wright/src/grammar/tracing/parsers/: alt.rs
