[package]
name = "wright"
description = "The rust package and API for the wright programming language."
license = "MIT"
version = "0.10.0"
authors = ["Antonia Calia-Bogan <acaliabogan@gmail.com>"]
repository = "https://github.com/Wright-Language-Developers/Wright-lang"
documentation = "https://docs.rs/wright"
readme = "../README.md"
keywords = ["wright", "language", "bytecode", "compiler", "interpreter"]
edition = "2018"

[lib]
name = "wright"
test = true
doctest = true
doc = true

[dependencies]
# Commandline argument parsing
clap = "~2.33"
# Source tracking and error reporting
codespan = "0.9"
codespan-reporting = "0.9"
# Exitcode standardiation
exitcode = "1"
# Parsing
nom = "^5.1"
# Serializing AST nodes for equality cheching or reporting
serde = "1"
serde_json = "1"

[[bin]]
name = "wright"
test = false
doc = false
doctest = false

[badges]
travis-ci = {repository = "Wright-Language-Developers/Wright-lang"}
appveyor = {repository = "Wright-Language-Developers/Wright-lang"}
is-it-maintained-issue-resolution = { repository = "Wright-Language-Developers/Wright-lang" }
is-it-maintained-open-issues = { repository = "Wright-Language-Developers/Wright-lang" }
maintenance = { status = "actively-developed" }
